working on adding musos to events

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'all-events' %}">All Events</a>
+                        </li>
                         {% if user.is_authenticated %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
@@ -30,6 +33,7 @@
                 </div>
             </div>
         </nav>
+        
     </header>
     <main>
         {% block content %}
